plugins/kotlin/idea/tests/testData/multiplatform/duplicateActualsOneWithStrongIncompatibility/middle/middle.kt
package foo

actual fun <!LINE_MARKER("descr='Has expects in top module'")!>foo<!>(): Int = 42
